<resources>
    <string name="app_name">gfastandroid</string>
    <string name="login_etEmail">Introduza o E-mail!</string>
    <string name="login_etName">Introduza o Nome!</string>
    <string name="login_etSurname">Introduza o Sobrenome!</string>
    <string name="login_etCity">Introduza a Cidade!</string>
    <string name="login_etPhone">Introduza o Contacto!</string>
    <string name="login_etContribuinte">Introduza o Contribuinte!</string>
    <string name="login_etPassword">Introduza a Password!</string>
    <string name="login_btnLogin">Login</string>
    <string name="login_btnRegister">Registo</string>
    <string name="login_btnToLogin">Login</string>
    <string name="login_btnEditar">Editar</string>
    <string name="login_btnVoltar">Voltar</string>
    <string name="login_etEmail_Erro">Email Inválido!</string>
    <string name="login_etUserName_Erro">UserName Inválido!</string>
    <string name="login_etName_Erro">Nome Inválido!</string>
    <string name="login_etSurname_Erro">Sobrenome Inválido!</string>
    <string name="login_etCity_Erro">Cidade Inválido!</string>
    <string name="login_etPhone_Erro">Telemóvel Inválido!</string>
    <string name="login_etContribuinte_Erro">Contribuinte Inválido!</string>
    <string name="login_etPassword_Erro">Password errada!</string>
    <string name="main_btn_detalhe_estatico">Ver detalhes (estático)</string>
    <string name="main_btn_detalhe_dinamico">Ver detalhes (dinamico)</string>
    <string name="main_btn_detalhe_email">ver detalhes (email)</string>
    <string name="comunicar">Comunicar</string>
    <string name="email">Email</string>
    <string name="ndOpen">aberto</string>
    <string name="ndClose">fechado</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="guitarra">Guitarra:</string>
    <string name="marca">Marca:</string>
    <string name="modelo">Modelo:</string>
    <string name="preco">Preco:</string>
    <string name="guitarras">Guitarras</string>
    <string name="carrinho">Carrinho</string>
    <string name="hist_rico">Histórico</string>
    <string name="localiza_o">Localização</string>
    <string name="noticias">Noticias</string>
    <string name="perfil">Perfil</string>
    <string name="sobre">Sobre</string>
    <string name="sair">Sair</string>
    <string name="iplocal">http://192.168.1.223:8061/</string>
    <string name="username">Username</string>
    <string name="login_text">Login</string>
    <string name="register_text">Registo</string>
    <string name="introduza_o_username">Introduza o Username</string>
    <string name="pesquisa">pesquisa</string>
    <string name="the_best_guitar">The best guitar</string>
    <string name="_50">50$</string>
    <string name="yamaha">Yamaha</string>
    <string name="el_trica">Elétrica</string>
    <string name="modelo_st">Modelo St</string>
    <string name="esta_guitarra_a_melhor_porque_tem_um_acabamento_incrivel_de_metal_e_tem_detalhes_especiais">Esta guitarra é a melhor porque tem um acabamento incrivel de metal e tem detalhes especiais!!</string>
    <string name="adicionar">Adicionar</string>
    <string name="favoritos">Favoritos</string>
</resources>