<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".vistas.MainActivity">

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="100dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Bem-Vindo!"
        android:textAlignment="center"
        android:textColor="#102FD6"
        android:textSize="40dp" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Email"
        android:textAlignment="center"
        android:textColor="#423737"
        android:textSize="25dp" />

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="60dp" />

    <Button
        android:id="@+id/btnEstatico"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:text="@string/main_btn_detalhe_estatico"
        android:onClick="onClickDetalhesEstatico" />


    <Button
        android:id="@+id/btnDinamico"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:text="@string/main_btn_detalhe_dinamico"
        android:onClick="onClickDetalhesDinamico" />

    <Button
        android:id="@+id/btnEmail"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:text="@string/main_btn_detalhe_email"
        android:onClick="onClickDetalhesEmail" />

</LinearLayout>