<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vistas.DetalhesGuitarras">

    <ImageView
        android:id="@+id/imgGuitarra"
        android:layout_width="0dp"
        android:layout_height="107dp"
        android:layout_weight="0.3"
        app:srcCompat="@drawable/programarandroid1" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.7"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/marca"
                android:textColor="#000000"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvMarca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/modelo"
                android:textColor="#000000"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvModelo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/preco"
                android:textColor="#000000"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvPreco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <Button
                android:id="@+id/tvAnoDinamico"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Adicionar ao Carrinho" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>