<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vistas.DetalhesGuitarras">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="299dp"
        android:layout_height="115dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="0.7"
        android:orientation="vertical"
        android:textAlignment="center"
        app:flow_horizontalAlign="center"
        app:flow_verticalAlign="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imgGuitarra"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvone"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_weight="0"
                android:text="@string/marca"
                android:textAlignment="textEnd"
                android:textColor="#000000"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvMarca"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_weight="0" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_one"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_weight="0"
                android:text="@string/modelo"
                android:textColor="#000000"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvModelo"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_weight="0" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_two"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_weight="0"
                android:text="@string/preco"
                android:textColor="#000000"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvPreco"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_weight="0" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imgGuitarra"
        android:layout_width="111dp"
        android:layout_height="115dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="68dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="20dp"
        android:clickable="true"
        android:src="@drawable/ic_adicionaricon"
        app:backgroundTint="@color/purple_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout"
        app:rippleColor="#9FFFFFFF" />

</androidx.constraintlayout.widget.ConstraintLayout>